package com.team.deminder.deminder;

public class SettingsPage {

    public SettingsPage() {
    }
}
