@startuml

title __DEMINDER's Class Diagram__\n

  package com.team.deminder.deminder {
    class DeadlineOverviewPage {
    }
  }
  

  package com.team.deminder.deminder {
    class MainActivity {
        # onCreate()
    }
  }
  

  class HostCallbacks {
      + HostCallbacks()
      + onDump()
      + onShouldSaveFragmentState()
      + onGetLayoutInflater()
      + onGetHost()
      + onSupportInvalidateOptionsMenu()
      + onStartActivityFromFragment()
      + onStartActivityFromFragment()
      + onStartIntentSenderFromFragment()
      + onRequestPermissionsFromFragment()
      + onShouldShowRequestPermissionRationale()
      + onHasWindowAnimations()
      + onGetWindowAnimations()
      + onAttachFragment()
      + onFindViewById()
      + onHasView()
  }
  

  class NonConfigurationInstances {
      ~ custom : Object
      ~ viewModelStore : ViewModelStore
      ~ fragments : FragmentManagerNonConfig
      ~ NonConfigurationInstances()
  }
  

  class ExtraData {
      + ExtraData()
  }
  

  package com.team.deminder.deminder {
    class ManageDeadlinePage {
    }
  }
  

  package com.team.deminder.deminder {
    class SettingsPage {
        + SettingsPage()
    }
  }
  

  MainActivity -up-|> AppCompatActivity
  MainActivity +-down- HostCallbacks
  MainActivity +-down- NonConfigurationInstances
  MainActivity +-down- ExtraData
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
